tests/ui/transmutability/maybeuninit.stderr
error[E0277]: `MaybeUninit<u8>` cannot be safely transmuted into `u8`
  --> $DIR/maybeuninit.rs:21:54
   |
LL |     assert::is_maybe_transmutable::<MaybeUninit<u8>, u8>();
   |                                                      ^^ at least one value of `MaybeUninit<u8>` isn't a bit-valid value of `u8`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/maybeuninit.rs:12:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src, { Assume::SAFETY }>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
